k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: loki-system
  labels:
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: v1.0
    app.kubernetes.io/managed-by: kubectl
